Fix duration detection in EggPlayPreview

To get the track duration EggPlayPreview was checking for messages of
type GST_MESSAGE_DURATION and then calling
gst_message_parse_duration() which always returns a duration of
-1. This meant that the track duration was always zero which broke
seeking. It should check for messages of type
GST_MESSAGE_DURATION_CHANGED and query playbin for the new duration
instead.

https://bugzilla.gnome.org/show_bug.cgi?id=744941